--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -245,7 +245,7 @@
          </property>
          <property name="maximumSize">
           <size>
-           <width>100</width>
+           <width>16777215</width>
            <height>30</height>
           </size>
          </property>
