--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -49,6 +49,12 @@
     <layout class="QHBoxLayout" name="horizontalLayout_16" stretch="0,5">
      <item>
       <widget class="QGroupBox" name="verticalGroupBox">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <layout class="QFormLayout" name="formLayout">
         <property name="sizeConstraint">
          <enum>QLayout::SetFixedSize</enum>
