--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>858</width>
-    <height>559</height>
+    <width>814</width>
+    <height>538</height>
    </rect>
   </property>
   <property name="font">
@@ -46,11 +46,14 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_16" stretch="0,5">
+    <layout class="QHBoxLayout" name="horizontalLayout_16" stretch="0,10">
+     <property name="spacing">
+      <number>10</number>
+     </property>
      <item>
       <widget class="QGroupBox" name="verticalGroupBox">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+        <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -436,6 +439,9 @@
      </item>
      <item>
       <layout class="QGridLayout" name="gridLayout">
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <item row="11" column="4">
         <widget class="QLineEdit" name="tec4_Supply_U">
          <property name="frame">
